<resources>
    <string name="app_name">HSE TimeTable</string>
    <string name="button_1">РАСПИСАНИЕ ДЛЯ СТУДЕНТОВ</string>
    <string name="button_2">РАСПИСАНИЕ ДЛЯ ПРЕПОДАВАТЕЛЯ</string>
    <string name="choose_group">Выберите группу:</string>
    <string name="timetable_day">РАСПИСАНИЕ НА ДЕНЬ</string>
    <string name="timetable_week">РАСПИСАНИЕ НА НЕДЕЛЮ</string>
    <string name="choose_teacher">Выберите преподавателя:</string>

    <string name="status">Нет пар</string>
    <string name="subject">Дисциплина</string>
    <string name="cab">Кабинет</string>
    <string name="corp">Корпус</string>
    <string name="teacher">Преподаватель</string>
    <string name="now">Сейчас</string>
    <string name="mocktime">12:00 Понедельник</string>
    <string name="Settings">Настройки</string>
    <string name="SaveTextRussian">Cохранить</string>
    <string name="ChoosePhoto">Укажите фото:</string>
    <string name="MakePhotoTextRus">Сделать фото</string>
    <string name="IlluminationTextRus">Текущая освещённость</string>
    <string name="InsertName">Укажите ваше имя</string>
    <string name="titleShowExplanation">Нужно предоставить права</string>
    <string name="messageShowExplanation">Для съёмки фото нужно предоставить права</string>
    <string name="GivePermission">Дать разрешение</string>
    <string name="DataChangedRus">Данные изменены</string>
    <string name="DataGetRus">Данные считаны</string>
    <string name="lesson_in_progress">Идёт пара</string>
    <string name="noLessoms">Нет пар на выбранный период!</string>

</resources>