<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp">


        <TextView
            android:id="@+id/activity_teacher_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/choose_teacher"
            android:textAppearance="@style/Theme.Label" />

        <Spinner
            android:id="@+id/activity_teacher_groupList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_teacher_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/now" />

            <TextView
                android:id="@+id/activity_teacher_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/mocktime" />
        </LinearLayout>


        <TextView
            android:id="@+id/activity_teacher_status"
            style="@style/Theme.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            tools:text="@string/status"

            />

        <TextView
            android:id="@+id/activity_teacher_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/subject" />

        <TextView
            android:id="@+id/activity_teacher_cabinet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/cab" />

        <TextView
            android:id="@+id/activity_teacher_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/corp" />

        <TextView
            android:id="@+id/activity_teacher_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/teacher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"

        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/activity_teacher_button_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/timetable_day"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activity_teacher_button_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/timetable_week"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>